--- a/case/04.小米商品导航菜单/index.html
+++ b/case/04.小米商品导航菜单/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小米商品导航菜单</title>
-    <link rel="stylesheet" href="./iconfont.css">
+    <link rel="stylesheet" href="./assets/iconfont.css">
     <link rel="stylesheet" href="../assets/reset.css">
     <style>
         /* 区域容器 */
@@ -86,23 +86,23 @@
             <!-- 导航栏中扩展的菜单进行同级设置 -->
             <ul class="nav-menu">
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
             </ul>
@@ -116,39 +116,39 @@
             <i class="iconfont icon-right-arrow"></i>
             <ul class="nav-menu">
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
             </ul>
@@ -161,59 +161,59 @@
             <i class="iconfont icon-right-arrow"></i>
             <ul class="nav-menu">
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
                 <li>
-                    <img src="./phone.png" alt="">
+                    <img src="./assets/phone.png" alt="">
                     <p>小米 MIX FOLD</p>
                 </li>
             </ul>
