--- a/case/02.知乎导航/index.html
+++ b/case/02.知乎导航/index.html
@@ -84,8 +84,8 @@
         }
 
         /* 右侧按钮 */
-        /* 注意：buttom的border不会往外扩而是外内缩 */
-        /* 布局：作为弹性容器，由于buttom默认是inline-block，两个按钮之间会默认间隙，需要设置为block，同时作为弹性子项默认左右排列 */
+        /* 注意：button的border不会往外扩而是外内缩 */
+        /* 布局：作为弹性容器，由于button默认是inline-block，两个按钮之间会默认间隙，需要设置为block，同时作为弹性子项默认左右排列 */
         .header-btn{
             display: flex;
         }
