--- a/case/01.轮播图/index.html
+++ b/case/01.轮播图/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>轮播图</title>
-    <link rel="stylesheet" href="../assets/reset.css">
-    <link rel="stylesheet" href="./iconfont.css">
+    <link rel="stylesheet" href="./assets/reset.css">
+    <link rel="stylesheet" href="./assets/iconfont/iconfont.css">
     <style>
         /* 整个容器 */
         /* 宽：自适应视口宽度；高：自适应图片 */
@@ -82,9 +82,9 @@
     <div class="swiper-container">
         <!-- 轮播图主体 -->
         <div class="swiper-wrapper">
-            <div class="swiper-slide"><img src="./public/1.webp" alt=""></div>
-            <div class="swiper-slide"><img src="./public/2.webp" alt=""></div>
-            <div class="swiper-slide"><img src="./public/3.webp" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/1.webp" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/2.webp" alt=""></div>
+            <div class="swiper-slide"><img src="./assets/img/3.webp" alt=""></div>
         </div>
 
         <!-- 如果需要分页器（底部小点） -->
