--- a/case/02.知乎导航/index.html
+++ b/case/02.知乎导航/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>知乎导航</title>
-    <link rel="stylesheet" href="./iconfont.css">
-    <link rel="stylesheet" href="../assets/reset.css">
+    <link rel="stylesheet" href="./assets/iconfont/iconfont.css">
+    <link rel="stylesheet" href="./assets/reset.css">
     <style>
         body{
             background:#f6f6f6;
@@ -117,7 +117,7 @@
     <div class="header-container">
         <div class="header-wrapper">
             <div class="header-logo">
-                <a href="#"><img src="./logo.png" alt=""></a>
+                <a href="#"><img src="./assets/img/logo.png" alt=""></a>
             </div>
             <!-- 左侧导航 -->
             <ul class="header-nav">
