--- a/case/04.小米商品导航菜单/index.html
+++ b/case/04.小米商品导航菜单/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>小米商品导航菜单</title>
     <link rel="stylesheet" href="./assets/iconfont.css">
-    <link rel="stylesheet" href="../assets/reset.css">
+    <link rel="stylesheet" href="./assets/reset.css">
     <style>
         /* 区域容器 */
         .nav{
