--- a/case/03.百度热词风云榜/index.html
+++ b/case/03.百度热词风云榜/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>百度热词风云榜</title>
-    <link rel="stylesheet" href="../assets/reset.css">
+    <link rel="stylesheet" href="./assets/reset.css">
     <style>
         .top{
             width:308px;
